# FractalExplorer

./: .gitignore  CMakeLists.txt  README.md  resource.rc
assets/shaders/: burningShipFractal.frag  juliaFractal.frag  mandelbrotFractal.frag  multibrotFractal.frag  multicornFractal.frag  newtonFractal_3.frag  newtonFractal_4.frag  newtonFractal_5.frag  polynomialFractal_2.frag  tricornFractal.frag
assets/shaders/v100/: burningShipFractal.frag  juliaFractal.frag  multibrotFractal.frag  multicornFractal.frag  newtonFractal_3.frag  newtonFractal_4.frag  newtonFractal_5.frag  newtonFractal_sin.frag  polynomialFractal_2.frag  polynomialFractal_3.frag
assets/shaders/v330/: burningShipFractal.frag  juliaFractal.frag  multibrotFractal.frag  multicornFractal.frag  newtonFractal_3.frag  newtonFractal_4.frag  newtonFractal_5.frag  newtonFractal_sin.frag  polynomialFractal_2.frag  polynomialFractal_3.frag
include/: ComplexDouble.h  ComplexNumber.h  Fractal Explorer.h  Fractal.h  Mandelbrot.h  Resources.h
include/ComplexNumbers/: ComplexDouble.h  ComplexFloat.h  ComplexPolynomial.h
include/Fractals/: Mandelbrot.h
include/UI/: GridUtils.h  Notification.h  UIUtils.h
source/: ComplexDouble.cpp  ComplexNumber.cpp  Fractal Explorer.cpp  Fractal.cpp  Mandelbrot.cpp  Resources.cpp  main.cpp
source/ComplexNumbers/: ComplexDouble.cpp  ComplexFloat.cpp  ComplexPolynomial.cpp
source/Fractals/: Mandelbrot.cpp
source/UI/: GridUtils.cpp  UIUtils.cpp
